--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "atob": "^2.1.2",
     "axios": "^0.21.1",
     "date-fns": "^2.21.1",
+    "jose": "^3.11.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
