--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "atob": "^2.1.2",
     "axios": "^0.21.1",
     "date-fns": "^2.21.1",
-    "jose": "^3.11.6",
+    "jwk-to-pem": "^2.0.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -45,6 +45,7 @@
     "@nestjs/testing": "^7.6.15",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/jwk-to-pem": "^2.0.0",
     "@types/node": "^14.14.36",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
