--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --config jest.config.js"
+    "test": "jest --config ./jest.config.js"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
