--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 TRADIER_BASE_URL=https://sandbox.tradier.com/v1
+AUTH_SERVER_HOST=https://localhost:7003
+CLIENT_KEY=96fb73dc-ae88-4056-a349-6e7488f7f6c4
+CLIENT_NAME=stock-tracker-api
