--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^2.21.1",
     "jwk-to-pem": "^2.0.5",
     "mime": "1.6.0",
+    "nocache": "^2.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
