package.json tweaks

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "stock-tracker-api",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "name": "@craigmiller160/stock-tracker-api",
+  "version": "0.0.1-beta",
+  "author": "craigmiller160",
+  "publishConfig": {
+    "registry": "https://craigmiller160.ddns.net:30003/repository/npm-private/"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
