--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "atob": "^2.1.2",
     "axios": "^0.21.1",
     "date-fns": "^2.21.1",
+    "express-session": "^1.17.1",
     "jwk-to-pem": "^2.0.5",
     "mime": "1.6.0",
     "nocache": "^2.1.0",
@@ -43,6 +44,7 @@
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.22",
     "@types/jwk-to-pem": "^2.0.0",
     "@types/node": "^14.14.36",
