Added remaining properties for building the auth login URL

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ TRADIER_BASE_URL=https://sandbox.tradier.com/v1
 AUTH_SERVER_HOST=https://localhost:7003
 CLIENT_KEY=96fb73dc-ae88-4056-a349-6e7488f7f6c4
 CLIENT_NAME=stock-tracker-api
+AUTH_CODE_REDIRECT_URI=/stock-tracker/api/oauth/authcode/code
+AUTH_LOGIN_BASE_URI=/stock-tracker/oauth2
