More improvements to properties stored in the session

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ CLIENT_KEY=96fb73dc-ae88-4056-a349-6e7488f7f6c4
 CLIENT_NAME=stock-tracker-api
 AUTH_CODE_REDIRECT_URI=/stock-tracker/api/oauth/authcode/code
 AUTH_LOGIN_BASE_URI=/stock-tracker/oauth2
+AUTH_CODE_WAIT_MINS=10
